--- a/application.yaml
+++ b/application.yaml
@@ -6,3 +6,11 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+      
+okta:
+  oauth2:
+    issuer: https://dev-94978522.okta.com/oauth2/default
+    audience: api://default
+spring:
+  zipkin:
+    baseUrl: http://zipkin-svc:9411
